--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.8.0"
+    "fs": "^0.0.1-security",
+    "pg": "^8.8.0",
+    "swagger": "^0.7.5"
   }
 }
