--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "pg": "^8.8.0",
-    "swagger": "^0.7.5"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   }
 }
