--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "pg": "^8.8.0",
+    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
