--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.0",
     "path": "^0.12.7",
     "pg": "^8.8.0",
     "supertest": "^6.3.3",
